Propagate use-physical-code-source flag to ResourceLoader